--- a/Css/master.css
+++ b/Css/master.css
@@ -1,4 +1,9 @@
-/*Start Global Rules*/
+/**
+ * Start Global Rules
+ *
+ * @format
+ */
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -18,7 +23,7 @@ html {
 }
 
 body {
-  font-family: "Cairo", sans-serif;
+  font-family: 'Cairo', sans-serif;
 }
 
 a {
@@ -77,7 +82,7 @@ ul {
 
 .main-title::before,
 .main-title::after {
-  content: "";
+  content: '';
   width: 13px;
   height: 13px;
   background-color: var(--main-color);
@@ -180,7 +185,7 @@ header .container .main-nav > li > a {
 }
 
 header .main-nav > li > a::before {
-  content: "";
+  content: '';
   position: absolute;
   background-color: var(--main-color);
   width: 100%;
@@ -221,12 +226,7 @@ header .mega-menu {
   -ms-transition: opacity var(--main-transition), top var(--main-transition);
   -o-transition: opacity var(--main-transition), top var(--main-transition);
 }
-/* 
-header .main-nav li:last-child:hover .mega-menu {
-  z-index: 100;
-  opacity: 1;
-  top: 100%;
-} */
+
 header .mega-menu.appear-menu {
   z-index: 100;
   opacity: 1;
@@ -276,7 +276,7 @@ header .mega-menu .links li:not(:last-child) {
 }
 
 header .mega-menu .links li::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 100%;
@@ -318,7 +318,7 @@ header .mega-menu .links li i {
 }
 
 .welcome::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
@@ -522,7 +522,7 @@ header .mega-menu .links li i {
 }
 
 .wave::before {
-  content: "";
+  content: '';
   position: absolute;
   right: 0;
   width: 100%;
@@ -559,7 +559,7 @@ header .mega-menu .links li i {
 }
 
 .gallery .box .image::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 50%;
   left: 50%;
@@ -624,7 +624,7 @@ header .mega-menu .links li i {
 }
 
 .feature .box .image::before {
-  content: "";
+  content: '';
   position: absolute;
   top: -1px;
   left: 0;
@@ -633,7 +633,7 @@ header .mega-menu .links li i {
 }
 
 .feature .box .image::after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   right: 0;
@@ -663,7 +663,7 @@ header .mega-menu .links li i {
 }
 
 .feature .box .info h3::after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: -15px;
   left: 15px;
@@ -833,7 +833,7 @@ header .mega-menu .links li i {
 
 .team .box::before,
 .team .box::after {
-  content: "";
+  content: '';
   position: absolute;
   right: 0;
   top: 0;
@@ -969,7 +969,7 @@ header .mega-menu .links li i {
 }
 
 .services .container .box::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 3px;
@@ -1023,7 +1023,7 @@ header .mega-menu .links li i {
 }
 
 .services .box .info::before {
-  content: "0" counter(services);
+  content: '0' counter(services);
   position: absolute;
   width: 80px;
   height: 100%;
@@ -1040,7 +1040,7 @@ header .mega-menu .links li i {
 }
 
 .services .box .info::after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 74px;
@@ -1167,7 +1167,7 @@ header .mega-menu .links li i {
 }
 
 .works .info .box::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 0;
@@ -1322,7 +1322,7 @@ header .mega-menu .links li i {
   }
 }
 
-.events .subscripe form input[type="email"] {
+.events .subscripe form input[type='email'] {
   padding: 20px;
   border-radius: 50px;
   caret-color: var(--main-color);
@@ -1330,11 +1330,11 @@ header .mega-menu .links li i {
   flex: 1;
 }
 
-.events .subscripe form input[type="email"]:focus {
+.events .subscripe form input[type='email']:focus {
   outline: none;
 }
 
-.events .subscripe form input[type="email"]::placeholder {
+.events .subscripe form input[type='email']::placeholder {
   transition: opacity var(--main-transition);
   -webkit-transition: opacity var(--main-transition);
   -moz-transition: opacity var(--main-transition);
@@ -1342,17 +1342,17 @@ header .mega-menu .links li i {
   -o-transition: opacity var(--main-transition);
 }
 
-.events .subscripe form input[type="email"]:focus::placeholder {
+.events .subscripe form input[type='email']:focus::placeholder {
   opacity: 0;
 }
 
 @media (max-width: 767px) {
-  .events .subscripe form input[type="email"] {
+  .events .subscripe form input[type='email'] {
     border-radius: 0;
   }
 }
 
-.events .subscripe form input[type="submit"] {
+.events .subscripe form input[type='submit'] {
   padding: 20px;
   border-radius: 50px;
   color: white;
@@ -1367,12 +1367,12 @@ header .mega-menu .links li i {
   -o-transition: var(--main-transition);
 }
 
-.events .subscripe form input[type="submit"]:hover {
+.events .subscripe form input[type='submit']:hover {
   background-color: var(--main-alt-color);
 }
 
 @media (max-width: 767px) {
-  .events .subscripe form input[type="submit"] {
+  .events .subscripe form input[type='submit'] {
     border-radius: 0;
   }
 }
@@ -1442,7 +1442,7 @@ header .mega-menu .links li i {
 }
 .pricing .container .box::before,
 .pricing .container .box::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 50%;
@@ -1490,7 +1490,7 @@ header .mega-menu .links li i {
 }
 
 .pricing .box.popular .label::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   right: 0;
@@ -1537,8 +1537,8 @@ header .mega-menu .links li i {
 }
 
 .pricing .box ul li::before {
-  content: "\f00c";
-  font-family: "Font Awesome 5 Free";
+  content: '\f00c';
+  font-family: 'Font Awesome 5 Free';
   margin-right: 10px;
   font-weight: 900;
   color: var(--main-color);
@@ -1643,7 +1643,7 @@ header .mega-menu .links li i {
   position: relative;
 }
 .stats::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
@@ -1677,7 +1677,7 @@ header .mega-menu .links li i {
 }
 .stats .container .box::before,
 .stats .container .box::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 3px;
   height: 0;
@@ -1742,7 +1742,7 @@ header .mega-menu .links li i {
   align-items: center;
 }
 .discount .image::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
@@ -1799,7 +1799,7 @@ header .mega-menu .links li i {
 .discount .form .input:focus {
   outline: none;
 }
-.discount .form [type="submit"] {
+.discount .form [type='submit'] {
   display: block;
   width: 100%;
   padding: 15px;
@@ -1815,7 +1815,7 @@ header .mega-menu .links li i {
   -ms-transition: var(--main-transition);
   -o-transition: var(--main-transition);
 }
-.discount .form [type="submit"]:hover {
+.discount .form [type='submit']:hover {
   background-color: var(--main-alt-color);
 }
 /*End Discount*/
@@ -1907,9 +1907,9 @@ header .mega-menu .links li i {
   -o-transition: var(--main-transition);
 }
 .footer .container .box .links li a::before {
-  content: "\f101";
+  content: '\f101';
   font-weight: bold;
-  font-family: "Font Awesome 5 Free";
+  font-family: 'Font Awesome 5 Free';
   margin-right: 5px;
   color: var(--main-color);
 }
